--- a/app/views/users/festivals/top.html.erb
+++ b/app/views/users/festivals/top.html.erb
@@ -16,7 +16,7 @@
     <div class="search-bar">
     	<!--options_from_collection_for_select
 		第１引数は表示させるデータ、第２引数は格納される値、第３引数はViewに表示される値-->
-		<span class="date-input" data-text="指定した日付の前後1週間を検索します">
+		<span class="top-date-input" data-text="指定した日付の前後1週間を検索します">
     	    <%= date_field_tag 'start_date', include_blank: "開催日" %>
     	</span>
         <%= select_tag 'prefecture_id', options_from_collection_for_select( Prefecture.all, :id, :name), include_blank: "都道府県", class:"btn btn-default dropdown-toggle", style: "width: 160px; height: 34px; padding: 6px 12px;" %>
