--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -268,3 +268,40 @@ input[type="email"] {
   width: 75%;
   float: right;
 }
+
+.festival-container {
+  margin-bottom: 50px;
+  position: relative;
+  padding-top: 35%;
+}
+
+.festival-container-image {
+  width: 38%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+.festival-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 7.89% 0 0 7.89% / 8.57% 0 0 8.57%;
+}
+
+.festival-container-content {
+  background-color: gray;
+  width: 62%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  border-radius: 0 4.83% 4.83% 0 / 0 8.57% 8.57% 0;
+}
+
+.festival-categories-each {
+  font-color: white;
+  background-color: red;
+  margin-right: 2px;
+}
