--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -213,15 +213,14 @@ input[type="email"] {
 }
 
 .main {
-  background-color: lightgreen;
   width: 100%;
   padding: 0 5%;
 }
 
 .main h1 {
-  background-color: brown;
   text-align: center;
-  margin: 20px auto;
+  margin: 50px auto;
+  color: lightsteelblue;
 }
 
 .main-left-search-bar {
@@ -265,14 +264,31 @@ input[type="email"] {
 
 .main-right {
   background-color: lightyellow;
+  border: 20px solid lightyellow;
+  border-radius: 5px;
   width: 75%;
   float: right;
-}
+  }
 
 .festival-container {
   margin-bottom: 50px;
   position: relative;
   padding-top: 35%;
+}
+
+.festival-container-link {
+  z-index: 1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 3% 3% 3% 3% / 9% 9% 9% 9%;
+}
+
+.festival-container-link:hover {
+  opacity: 0.1;
+  background-color: gray;
 }
 
 .festival-container-image {
@@ -291,17 +307,53 @@ input[type="email"] {
 }
 
 .festival-container-content {
-  background-color: gray;
+  background-color: burlywood;
   width: 62%;
   height: 100%;
   position: absolute;
   top: 0;
   right: 0;
   border-radius: 0 4.83% 4.83% 0 / 0 8.57% 8.57% 0;
+  padding: 3%;
+  font-size: 110%;
+}
+
+.festival-container-content i {
+  margin-right: 1%;
+}
+
+.festival-name {
+  font-size: 250%;
+  font-weight: bold;
+  color: white;
+}
+
+
+.festival-period {
+  margin-top: 20px;
+}
+
+.festival-period-date {
+  text-decoration: underline;
+}
+
+.festival-prefecture {
+  margin: 2px auto;
+  text-decoration: underline;
+}
+
+.festival-categories {
+  margin-bottom: 20px;
 }
 
 .festival-categories-each {
-  font-color: white;
-  background-color: red;
-  margin-right: 2px;
+  color: linen;
+  background-color: #de87ad;
+  margin-right: 1%;
+  border-radius: 5px;
+  padding: 0 2%;
+}
+
+.festival-detail {
+  font-size: 110%;
 }
