--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -264,14 +264,13 @@ input[type="email"] {
 
 .main-right {
   background-color: lightyellow;
-  border: 20px solid lightyellow;
   border-radius: 5px;
   width: 75%;
   float: right;
   }
 
 .festival-container {
-  margin-bottom: 50px;
+  margin: 60px 40px;
   position: relative;
   padding-top: 35%;
 }
@@ -342,10 +341,6 @@ input[type="email"] {
   text-decoration: underline;
 }
 
-.festival-categories {
-  margin-bottom: 20px;
-}
-
 .festival-categories-each {
   color: linen;
   background-color: #de87ad;
@@ -356,4 +351,93 @@ input[type="email"] {
 
 .festival-detail {
   font-size: 110%;
+  margin-top: 20px;
+}
+
+
+.festival-show-page-name {
+  font-size: 130%;
+  text-decoration: none;
+  font-style: italic;
+}
+
+
+.festival-show-container {
+  background-color: burlywood;
+  border-radius: 5px;
+  padding: 0 5%;
+}
+
+.festival-name.show-page {
+  font-size: 350%;
+  text-align: center;
+  padding-top: 4%;
+  margin-bottom: 4%;
+  text-decoration: underline solid gray;
+}
+
+.festival-show-elements {
+  margin-bottom: 1%;
+}
+
+.festival-show-elements i {
+  margin-right: 0.25%;
+}
+
+.festival-prefecture.show-page {
+  margin: 0 2.5%;
+}
+
+.festival-categories-each.show-page {
+  margin-right: auto;
+}
+
+.festival-show-container-image {
+  text-align: center;
+}
+
+.festival-show-image {
+  width: 96%;
+  height: 100%;
+  object-fit: cover;
+}
+
+h3 {
+  text-decoration: underline;
+}
+
+h3 i {
+  margin-right: 1%;
+}
+
+.festival-detail.show-page {
+  margin-top: 5%;
+}
+
+.festival-detail-text {
+  margin: 0 2%;
+}
+
+.festival-address {
+  margin-top: 6%;
+  padding-bottom: 10%;
+}
+
+.festival-address-detail {
+  text-align: center;
+  margin-bottom: 3%;
+}
+
+.btn i {
+  margin-right: 1%;
+}
+
+
+.festival-address-text {
+  font-style: italic;
+  margin-right: 5%;
+}
+
+.btn.show-page {
+  font-size: 150%;
 }
