Finish google map on users/hotels#index

--- a/app/views/users/hotels/index.html.erb
+++ b/app/views/users/hotels/index.html.erb
@@ -1,5 +1,27 @@
+<div class="hotel-index-pilot" style="background-color: linen;">
+
+
 <h1>"<%= @festival.name %>"付近のホテル一覧</h1>
 <p>会場: <%= @festival.address %></p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 <!--下記、Google Map表示-->
 <h2>gmap</h2>
@@ -7,40 +29,88 @@ latitude:<%= @festival.latitude %><br>
 longitude:<%= @festival.longitude %>
 <style>
 #map{
-  height: 400px;
-  width: 400px;
+  height: 500px;
+  width: 80%;
+  left: 10%;
 }
 </style>
 
-    <div id="map"></div>
-    <script>
-    function initMap() {
-    var test ={lat: <%= @festival.latitude %>, lng: <%= @festival.longitude %>};
-    var map = new google.maps.Map(document.getElementById('map'), {
-      zoom: 15,
-      center: test
-    });
-    var transitLayer = new google.maps.TransitLayer();
-    transitLayer.setMap(map);
+        <div id="map"></div>
+        <script>
+          function initMap() {
+            var latlng = new google.maps.LatLng(<%= @festival.latitude %>, <%= @festival.longitude %>);
+            var map = new google.maps.Map(document.getElementById('map'), {
+              center: latlng,
+              zoom: 15,
+            });
+            var marker = new google.maps.Marker({
+                position: latlng,
+                map: map,
+              });
+            var transitLayer = new google.maps.TransitLayer();
+            transitLayer.setMap(map);
 
-    var contentString = "住所：<%= @festival.address %>";
-    var infowindow = new google.maps.InfoWindow({
-      content: contentString
-    });
 
-    var marker = new google.maps.Marker({
-      position:test,
-      map: map,
-      title: contentString
-    });
+            //Hotelマーカー ここから
+            <% @hotels.each do |hotel| %>
+            (function(){
+              var contentString = '<div><%= link_to hotel.name, new_users_user_reservation_path(current_user, params: {festival_id: @festival.id, hotel_id: hotel.id}), style: "color: #0000ee; font-weight: bold;" %></div><div><%= hotel.address %></div>';
+              var infoWindow =new google.maps.InfoWindow({
+                content: contentString
+              });
+              var marker = new google.maps.Marker({
+                position: {lat: <%= hotel.latitude %>, lng: <%= hotel.longitude %>},
+                map: map,
+                title: contentString
+              });
+              marker.addListener('click', function(){
+                infoWindow.open(map, marker);
+              });
+            })();
+            <% end %>
+            //Hotelマーカーここまで
+          }
 
-    marker.addListener('click', function() {
-      infowindow.open(map, marker);
-    });
-    }
+
+
+
+
+        </script>
+
+
+
+
     </script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwNc99Q2u5MzbjDkJp3kb1u2IH_-ofbBk&callback=initMap"
     ></script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 <table class="table table-hover">
   <thead>
@@ -70,5 +140,7 @@ longitude:<%= @festival.longitude %>
       <% end %>
   </tbody>
 </table>
+
+</div>
 
 
