--- a/app/views/users/festivals/about.html.erb
+++ b/app/views/users/festivals/about.html.erb
@@ -37,9 +37,9 @@
           <br>
           <br>
       </div>
-      <div class="return-top-button" style="text-align: center;">
-        <%= link_to root_path, data: {"turbolinks" => false}, class: "btn btn-success btn-s-md", style: "width: 30%;" do %>
-        <i class="fas fa-home" style="margin-right: 5px;"></i>TOPに戻る
+      <div class="return-top-button">
+        <%= link_to root_path, data: {"turbolinks" => false}, class: "btn btn-success btn-s-md", style: "width: 40%;" do %>
+        <i class="fas fa-home"></i>TOPに戻る
       <% end %>
       </div>
     </div>
