--- a/app/views/users/hotels/index.html.erb
+++ b/app/views/users/hotels/index.html.erb
@@ -5,7 +5,7 @@
       <h3><i class="fas fa-map-marked"></i>周辺MAP</h3>
     </div>
     <div class="hotel-index-festival-address">
-      <i class="fas fa-map-marker-alt"></i>開催地: <span><%= @festival.address %></span>
+      <i class="fas fa-thumbtack"></i>開催地: <span><%= @festival.address %></span>
     </div>
     <!--下記、Google Map表示-->
     <style>
@@ -18,31 +18,39 @@
     <div id="map"></div>
     <script>
       function initMap() {
-        var latlng = new google.maps.LatLng(<%= @festival.latitude %>, <%= @festival.longitude %>);
+        var festivalLatLng = new google.maps.LatLng(<%= @festival.latitude %>, <%= @festival.longitude %>);
         var map = new google.maps.Map(document.getElementById('map'), {
-          center: latlng,
+          center: festivalLatLng,
           zoom: 15,
         });
-        var marker = new google.maps.Marker({
-            position: latlng,
+        var festivalMarker = new google.maps.Marker({
+            position: festivalLatLng,
             map: map,
           });
         var transitLayer = new google.maps.TransitLayer();
         transitLayer.setMap(map);
+        var festivalContent = '<div style="color: #0000ee; font-weight: bold;"><%= @festival.name %></div><div><%= @festival.address %></div>';
+        var festivalInfoWindow =new google.maps.InfoWindow({
+            content: festivalContent
+        });
+        festivalInfoWindow.open(map, festivalMarker);
+        festivalMarker.addListener('click', function(){
+            festivalInfoWindow.open(map, festivalMarker);
+        });
         //Hotelマーカー ここから
         <% @hotels.each do |hotel| %>
         (function(){
           var contentString = '<div><%= link_to hotel.name, new_users_user_reservation_path(current_user, params: {festival_id: @festival.id, hotel_id: hotel.id}), style: "color: #0000ee; font-weight: bold;" %></div><div><%= hotel.address %></div>';
-          var infoWindow =new google.maps.InfoWindow({
+          var hotelInfoWindow =new google.maps.InfoWindow({
             content: contentString
           });
-          var marker = new google.maps.Marker({
+          var hotelMarker = new google.maps.Marker({
             position: {lat: <%= hotel.latitude %>, lng: <%= hotel.longitude %>},
             map: map,
             title: contentString
           });
-          marker.addListener('click', function(){
-            infoWindow.open(map, marker);
+          hotelMarker.addListener('click', function(){
+            hotelInfoWindow.open(map, hotelMarker);
           });
         })();
         <% end %>
