--- a/app/views/users/festivals/about.html.erb
+++ b/app/views/users/festivals/about.html.erb
@@ -2,40 +2,77 @@
 	<h1 class="page-title">What's FesTibo ?</h1>
   <div class="about-content clearfix">
   	<div class="about-content-left">
-  	  FesTiboは、祭りをもとにホテルを探せる検索サイトです<br>
+      <h4>概要</h4>
+      <ul>
+        <li>日本各地の祭りを元に、ホテルなどを検索できる宿泊施設予約サイト</li>
+        <li>「祭りに行くまでの段取りが大変」を解消</li>
+      </ul>
+      <h4>機能</h4>
+      <ul>
+        <li>日付・都道府県・カテゴリーの条件から祭りを検索できる</li>
+        <li>目的の祭りから、ホテルを検索・予約できる</li>
+      </ul>
+      <h4>注意</h4>
+      <ul>
+        <li>このサイトはポートフォリオ用に制作したものであり、実際には予約できません</li>
+        <li>データはデモ用に用意したものであり、実在の人物や団体などとは関係ありません</li>
+      </ul>
+      <h4>使い方</h4>
+      <ol>
+        <li>ログインページにアクセス後、下記ユーザ情報でログイン</li>
+        <ul>
+          <li>メールアドレス: user@festibo.com</li>
+          <li>パスワード: password</li>
+        </ul>
+        <br>
+        <li>トップページ遷移後、条件を指定して"Search"をクリック、祭り一覧ページに遷移</li>
+        <div>* 条件を何も選択せずに検索すると全ての祭りが表示されます<br>
+        * 条件に合致する祭りが無い場合は何も表示されません</div>
+        <br>
+        <li>検索した祭りの中から下記のいずれかをクリック、祭り詳細ページに遷移</li>
+        <ul>
+          <li>ねぶた祭り</li>
+          <li>竿燈祭り</li>
+          <li>札幌雪まつり</li>
+        </ul>
+        <br>
+        <li>ページ中部にある"近くのホテルをチェック"をクリック、ホテル一覧ページに遷移</li>
+        <br>
+        <li>地図もしくはおすすめのホテルからいずれかをクリック、ホテル予約ページに遷移</li>
+        <div>* 宿泊プラン数が 0 のホテルを選択した場合、次ページで予約手続きできません</div>
+        <br>
+        <li>部屋番号と日程を選択して"予約する"をクリック、予約完了ページに遷移</li>
+        <br>
+        <li>予約完了(デモ終了)</li>
+      </ol>
       <br>
-      どこに旅をしようか。やっぱり東京、大阪、京都かな<br>
-      でもどれもみんなが行く場所、そして既に誰かが見た景色<br>
-      誰も見たことがない自分だけの日本を探したい<br>
-      <br>
-      それなら祭りはいかがですか？<br>
-      祭りはまさに生き物、生身の人間たちが主役で、<br>
-      そこでしか、その瞬間でしか見れないあなただけの景色が見れます<br>
-      <br>
-      日本各地に素晴らしいお祭りがあります<br>
-      しかしいざ調べるとなると祭り情報サイトやホテルサイトや地図など、<br>
-      色んなツールを同時に使わなければならず、なかなか足を運べませんよね<br>
-      <br>
-      FesTiboはそのような煩わしさからあなたを解放し、<br>
-      多種多様なFestivo=「祭り」への旅をお手伝いします<br>
-      そしてこのFesTiboを通して、<br>
-      あなたしか見ることができない日本に巡り合えればとても嬉しいです<br>
-      <br>
-       さあ、あなただけの日本を見つけてください<br>
-      <br>
-      <br>
-      <div class="how-to-use">
-        <p style="">
-          FesTiboの使い方
-        </p>
-          1. 日付・場所・ジャンルから祭りを検索(複数条件指定可)<br>
-          2. 祭りを選択して詳細をチェック<br>
-          3. 行きたい祭りが決まったら近くのホテルを検索<br>
-          4. ホテルを選択して詳細をチェック<br>
-          5. プランと宿泊日程を指定して予約<br>
-          6. 予約完了!!<br>
-          <br>
-          <br>
+      <h4>FesTibo紹介文</h4>
+      <div class="introduction-content">
+        日本の伝統的な祭りといえば？<br>
+        今あなたの頭の中にいくつかの祭りが思い浮かんでいるでしょう<br>
+        <br>
+        では実際にそこへ足を運んだことはありますか？<br>
+        多くの方は「無い」と答えるでしょう<br>
+        私もそのうちの1人です<br>
+        <br>
+        日本各地に魅力的な祭りがたくさんあるにもかかわらず、<br>
+        実際に行く人が少ないのはなぜでしょうか？<br>
+        大きな要因は、「祭りに行くまでの段取りが大変だから」です<br>
+        <br>
+        どれくらい大変かをイメージするために<br>
+        以前私が祭りに行こうと計画した際に使用したツールをご紹介します<br>
+        - 祭りサイト、ホテル予約サイト(複数)、地図アプリ、祭りレビューブログ(複数)、画像検索、カレンダー、交通アプリ(複数)...<br>
+        <br>
+        これだけ多くのツールを同時に使用しなければならないことから<br>
+        多くの人が計画段階で断念してしまうことも頷けます<br>
+        <br>
+        そこでFesTiboは、祭りとホテルを一度に探せるサービスを提供します<br>
+        あなたが行きたい祭りを見つけ、<br>
+        ワンクリックで近くのホテルを表示し、<br>
+        そして予約が完了するまでを一貫してお手伝いします<br>
+        <br>
+        このFesTiboを通して<br>
+        あなたが素晴らしい祭りに巡り合えればうれしいです<br>
       </div>
       <div class="return-top-button">
         <%= link_to root_path, data: {"turbolinks" => false}, class: "btn btn-success btn-s-md", style: "width: 40%;" do %>
